--- a/client/views/users/new.html
+++ b/client/views/users/new.html
@@ -1,1 +1,8 @@
 <h3>New User</h3>
+
+<form>
+  <input type="text" ng-model="user.title" placeholder="title" />
+  <input type="text" ng-model="user.name" placeholder="title" />
+  <input type="text" ng-model="user.age" placeholder="age" />
+  <input type="text" ng-model="user.gender" placeholder="gender" />
+</form>
