--- a/client/views/users/new.html
+++ b/client/views/users/new.html
@@ -5,4 +5,5 @@
   <input type="text" ng-model="user.name" placeholder="title" />
   <input type="text" ng-model="user.age" placeholder="age" />
   <input type="text" ng-model="user.gender" placeholder="gender" />
+  <button ng-click="add()">Add</button>
 </form>
