--- a/client/views/users/new.html
+++ b/client/views/users/new.html
@@ -1,9 +1,28 @@
 <h3>New User</h3>
 
-<form>
-  <input type="text" ng-model="user.title" placeholder="title" />
-  <input type="text" ng-model="user.name" placeholder="title" />
-  <input type="text" ng-model="user.age" placeholder="age" />
-  <input type="text" ng-model="user.gender" placeholder="gender" />
-  <button ng-click="add()">Add</button>
-</form>
+<div class="row">
+  <div class="col-lg-4">
+    <form>
+      <div class="form-group">
+        <label>Title</label>
+        <input class="form-control" type="text" ng-model="user.title" />
+      </div>
+      <div class="form-group">
+        <label>Name</label>
+        <input class="form-control" type="text" ng-model="user.name" />
+      </div>
+      <div class="form-group">
+        <label>Age</label>
+        <input class="form-control" type="text" ng-model="user.age" />
+      </div>
+      <div class="form-group">
+        <label>Gender</label>
+        <input class="form-control" type="text" ng-model="user.gender" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-default" ng-click="add()">Add User</button>
+      </div>
+    </form>
+  </div>
+  <div class="col-lg-8"></div>
+</div>
