--- a/client/views/users/new.html
+++ b/client/views/users/new.html
@@ -1,5 +1,9 @@
 <h3>New User</h3>
 
+<p>
+  <a style="width: 150px;" class="btn btn-info" ui-sref="users">Users</a>
+</p>
+
 <div class="row">
   <div class="col-lg-4">
     <form>
@@ -20,7 +24,7 @@
         <input class="form-control" type="text" ng-model="user.gender" />
       </div>
       <div class="form-group">
-        <button class="btn btn-default" ng-click="add()">Add User</button>
+        <button class="btn btn-success" ng-click="add()">Add User</button>
       </div>
     </form>
   </div>
