--- a/client/views/users/list.html
+++ b/client/views/users/list.html
@@ -1,7 +1,30 @@
 <h3>Users</h3>
 
-<ul>
-  <li><a ui-sref="new_user">New User</a></li>
-</ul>
+<p>
+  <a style="width: 150px;" class="btn btn-info" ui-sref="new_user">New User</a>
+</p>
 
-{{x}}
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Id</th>
+      <th>Title</th>
+      <th>Name</th>
+      <th>Age</th>
+      <th>Gender</th>
+      <th>Created</th>
+      <th>Updated</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="u in users">
+      <td>{{u.id}}</td>
+      <td>{{u.title}}</td>
+      <td>{{u.name}}</td>
+      <td>{{u.age}}</td>
+      <td>{{u.gender}}</td>
+      <td>{{u.createdAt | date}}</td>
+      <td>{{u.updatedAt | date}}</td>
+    </tr>
+  </tbody>
+</table>
