--- a/client/views/users/list.html
+++ b/client/views/users/list.html
@@ -7,6 +7,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>Delete</th>
       <th>Id</th>
       <th>Title</th>
       <th>Name</th>
@@ -18,6 +19,7 @@
   </thead>
   <tbody>
     <tr ng-repeat="u in users">
+      <td><button class="btn btn-danger" ng-click="delete(u.id)">X</button></td>
       <td>{{u.id}}</td>
       <td>{{u.title}}</td>
       <td>{{u.name}}</td>
