--- a/client/views/sales/detail.html
+++ b/client/views/sales/detail.html
@@ -4,6 +4,7 @@
   <a style="width: 150px;" class="btn btn-info" ui-sref="sales">Sales</a>
 </p>
 
+<h4>Sale</h4>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -27,6 +28,7 @@
   </tbody>
 </table>
 
+<h4>Product</h4>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -50,6 +52,7 @@
   </tbody>
 </table>
 
+<h4>User</h4>
 <table class="table table-striped">
   <thead>
     <tr>
