--- a/client/views/users/list.html
+++ b/client/views/users/list.html
@@ -36,7 +36,7 @@
   <tbody>
     <tr ng-repeat="u in users">
       <td><button class="btn btn-danger" ng-click="delete(u.id)">X</button></td>
-      <td>{{u.id}}</td>
+      <td><a class="btn btn-warning btn-xs" ui-sref="user_detail({user_id: u.id})">{{u.id}}</a></td>
       <td>{{u.title}}</td>
       <td>{{u.name}}</td>
       <td>{{u.age}}</td>
